--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -1,5 +1,6 @@
 .logo {
-  position: top fixed;
+  position: fixed;
+  top: 0;
   display: flex;
   align-items: center;
   width: 100vw;
@@ -9,4 +10,5 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 10px #4e008e;
+  z-index: 9;
 }
