--- a/src/Components/ServiceMovelInfo/style.css
+++ b/src/Components/ServiceMovelInfo/style.css
@@ -1,19 +1,11 @@
-.contCar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.descMovCarousel {
+  background-color: #4e008e;
+  color: #fff;
+  font-weight: 900;
   text-align: center;
+  padding: 1rem;
 }
-
-.carousel{
-    justify-content: center;
-    max-width: 30rem;
-}
-
-.boxContainer{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-
+a {
+  background-color: #4e008e;
+  box-shadow: 0 0 15px #4e008e;
 }
