--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
-.initialContainer {
-  margin-top: 12vh;
+
+.bgGround {
+  background-image: url("bg.jpg");
+  background-repeat:  space;
+  background-position: center; 
+  background-size: cover;
 }
