--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -19,17 +19,28 @@
   justify-content: center;
 }
 
-
 .serviceMovelContentTitle {
+  display: flex;
+  justify-content: center;
   font-size: 2rem;
   font-weight: 900;
   text-align: center;
   color: #4e008e;
+  margin: 2rem;
 }
 
-.opcDelivery{
+.opcDelivery {
   display: flex;
   flex-direction: column;
   justify-content: center;
   max-width: 95vw;
+}
+
+.cepContainer {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+
 }
