--- a/src/Pages/Cart/style.css
+++ b/src/Pages/Cart/style.css
@@ -1,3 +1,89 @@
-.tableCart {
-  margin: 0.5rem;
+.cartContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.borderCart {
+  border: 5px solid #4e008e;
+  border-radius: 1.5rem;
+}
+
+.containerInnerCart {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.cartImage {
+  max-width: 5rem;
+  max-height: 5rem;
+}
+
+.cartImageContainer {
+  display: flex;
+  flex-direction: column;
+  margin: 0.8rem;
+  justify-content: space-around;
+  align-items: center;
+  height: 10rem;
+}
+
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 10rem;
+}
+
+.infoContainer ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-decoration: none;
+  list-style: none;
+  align-items: flex-end;
+}
+.infoContainer ul li {
+  padding: 0.5rem;
+  text-align: center;
+}
+
+.qtdStyle {
+  border-top: 0;
+  border-left: 0;
+
+  border-right: 0;
+  max-width: 3rem;
+}
+
+.qtdStyleContainer {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+}
+
+.qtdStyleContainer label {
+  margin-right: 0.5rem;
+}
+
+.preco {
+  font-size: 1.5rem;
+  font-weight: 900;
+  letter-spacing: 2px;
+  color: #4e008e;
+}
+
+.titloCart{
+  font-size: 1rem;
+  font-weight: 900;
+}
+
