first timeline completed

--- a/src/Components/DropDownDelivery/styles.css
+++ b/src/Components/DropDownDelivery/styles.css
@@ -11,3 +11,12 @@
     color: #4e008e;
   }
   
+  .labelDelivery{
+      display: flex;
+      justify-content: center;
+      font-size: 1rem;
+      font-weight: 900;
+      color: #4e008e;
+      text-align: center;
+      margin-top: 1rem;
+  }
