--- a/src/Components/CarouselParthner/style.css
+++ b/src/Components/CarouselParthner/style.css
@@ -15,7 +15,7 @@
   flex-direction: column;
   align-content: center;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 1rem;
 }
 
 .inner.parthner button {
@@ -23,4 +23,15 @@
   color: #fff;
   margin: 0.3rem;
   padding: 0.5rem;
+}
+
+.chooseParthner {
+  padding: 1rem;
+  border-radius: 1rem;
+  background-color: #4e008e;
+  color: #fff;
+}
+
+.cardSumaryCombo {
+  margin-top: 1rem;
 }
