--- a/src/Pages/Cart/style.css
+++ b/src/Pages/Cart/style.css
@@ -82,8 +82,15 @@
   color: #4e008e;
 }
 
-.titloCart{
+.titloCart {
   font-size: 1rem;
   font-weight: 900;
 }
 
+.meuCarrinho {
+  font-size: 1.5rem;
+  font-weight: 900;
+  letter-spacing: 2px;
+  color: #4e008e;
+  padding: 0.5rem;
+}
