--- a/src/Components/SumaryItens/styleSumary.css
+++ b/src/Components/SumaryItens/styleSumary.css
@@ -1,4 +1,5 @@
 .sumaryContainer {
+  margin-top: 1rem;
   display: flex;
   justify-content: space-around;
   padding: 0.3rem;
@@ -39,7 +40,6 @@
 .iconSumary svg {
   font-size: 3rem;
   margin-right: 4rem;
- 
 }
 
 .totalSumary {
@@ -82,10 +82,20 @@
   align-items: center;
 }
 
-
-.headerSumaryBotton{
+.headerSumaryBotton {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   width: 100%;
+}
+
+.buttonsContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.buttonsContainer button {
+  display: flex;
+
 }
